compiler/testData/diagnostics/testsWithJvmBackend/duplicateJvmSignature/specialNames/classObject_old.kt
// TARGET_BACKEND: JVM_OLD

class C {
    companion <!CONFLICTING_JVM_DECLARATIONS, REDECLARATION!>object<!> {}

    <!CONFLICTING_JVM_DECLARATIONS!>konst <!REDECLARATION!>Companion<!><!> = C
}
